--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     Hello World
     <div>
         thus this is new addition to the file 
+        And today we added this one 
     </div>
 </body>
 </html>
